# blogmore

./: .codespellrc  .coverage  .gitignore  .pre-commit-config.yaml  404.html  =6.0.0  AGENTS.md  CONTRIBUTING.md  ChangeLog.md  Makefile  README.md  THEME_DEVELOPMENT_GUIDELINES.md  blogmore.yaml.example  coverage.xml  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  test_output.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
THEME_DEVELOPMENT_GUIDELINES/: index.html
building/: index.html
changelog/: index.html
command_line/: index.html
configuration/: index.html
docs/: CNAME  THEME_DEVELOPMENT_GUIDELINES.md  building.md  command_line.md  configuration.md  getting_started.md  index.md  linting.md  metadata_and_sidebar.md  setting_up_your_blog.md  template-api.md  templates.md  theming.md  using.md  writing_a_page.md  writing_a_post.md
example/posts/: getting-started.md  welcome.md
examples/themes/: README.md
examples/themes/minimal-monochrome/: README.md  custom.css
examples/themes/modern-compact/: README.md  custom.css
examples/themes/modern-compact/templates/: _post_summary.html  base.html
examples/themes/solarized-dark/: README.md  custom.css
getting_started/: index.html
license/: index.html
linting/: index.html
metadata_and_sidebar/: index.html
search/: search_index.json
setting_up_your_blog/: index.html
src/blogmore/: __init__.py  __main__.py  admonitions.py  backlinks.py  calendar.py  clean_url.py  cli.py  code_styles.py  comment_invite.py  config.py  content_path.py  external_links.py  feeds.py  fontawesome.py  generator.py  graph.py  heading_anchors.py  icons.py  image_manager.py  image_optimizer.py  linter.py  page_path.py  pagination_path.py  parser.py  post_path.py  publisher.py  renderer.py  responsive_images.py  search.py  server.py  site_config.py  sitemap.py  stats.py  utils.py
src/blogmore/generator/: __init__.py  _assets.py  _base.py  _context.py  _date_archives.py  _grouping.py  _listing.py  _minify.py  _optional_pages.py  _pages.py  _paths.py  _protocol.py  assets.py  constants.py  context.py  features.py  grouping.py  html.py  listing.py  listings.py  pages.py  paths.py  site.py  utils.py
src/blogmore/markdown/: __init__.py  admonitions.py  extensions.py  first_paragraph.py  link_patterns.py  optimised_images.py  optimized_images.py  plain_text.py  strikethrough.py
src/blogmore/templates/: _comment_invite.html  _listing_meta_tags.html  _pagination.html  _post_summary.html  archive.html  base.html  calendar.html  categories.html  category.html  graph.html  index.html  meta_tags.html  page.html  post.html  search.html  stats.html  tag.html  tags.html
src/blogmore/templates/static/: archive.css  calendar.css  codeblocks.js  graph.css  graph.js  search.css  search.js  stats.css  style.css  tag-cloud.css  theme.js
template-api/: index.html
templates/: archive.html  base.html  category.html  index.html  post.html  tag.html
templates/static/: style.css
tests/: README.md  conftest.py  test_admonitions.py  test_backlinks.py  test_calendar.py  test_clean_url.py  test_code_styles.py  test_comment_invite.py  test_config.py  test_content_path.py  test_external_links.py  test_feeds.py  test_fontawesome.py  test_fontawesome_cache.py  test_generator.py  test_graph.py  test_heading_anchors.py  test_icons.py  test_image_optimisation.py  test_image_optimization.py  test_image_optimizer.py  test_integration.py  test_lint.py  test_linter.py  test_main.py  test_page_path.py  test_pagination_path.py  test_parser.py  test_plain_text.py  test_post_path.py  test_publisher.py  test_renderer.py  test_responsive_images.py  test_search.py  test_sitemap.py  test_stats.py  test_strikethrough.py  test_utils.py
tests/fixtures/pages/: 404.md  about.md  seo-test-page.md
tests/fixtures/posts/: 2024-01-10-complex-post.md  2024-01-15-first-post.md  2024-01-20-draft-post.md  2024-02-01-no-date-post.md  2024-03-01-seo-test-post.md  2024-04-01-relative-cover.md  2024-04-02-relative-cover-no-slash.md
tests/fixtures/posts/2025/01/: nested-post.md
theming/: index.html
using/: index.html
writing_a_page/: index.html
writing_a_post/: index.html
