[project]
name = "blogmore"
version = "0.1.0"
description = "A blog-oriented static site generation engine"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
keywords = [
    "blog",
    "static site generator",
    "markdown",
    "jinja2",
]
dependencies = [
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-frontmatter>=1.1.0",
    "python-dateutil>=2.8.2",
    "watchdog>=6.0.0",
    "feedgen>=1.0.0",
    "pygments>=2.18.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/davep/blogmore"
Repository = "https://github.com/davep/blogmore"
Source = "https://github.com/davep/blogmore"
Issues = "https://github.com/davep/blogmore/issues"

[project.scripts]
blogmore = "blogmore.__main__:main"

[build-system]
requires = ["uv_build>=0.9.4"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "types-markdown>=3.7.0.20250106",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # I think try...except...pass reads far better.
    "SIM105",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=blogmore",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/blogmore"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
